fix sizing of auto sized flexbox https://bugs.webkit.org/show_bug.cgi?id=70839

Reviewed by David Hyatt.

Source/WebCore:

Correctly set the height of the flexbox when we have a column flow
and the height is auto.

Tests: css3/flexbox/columns-auto-size.html
       css3/flexbox/flex-flow-margins-auto-size.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock): Always computeLogicalHeight() after we're done placing children.
(WebCore::RenderFlexibleBox::layoutAndPlaceChildrenInlineDirection): Set the height as we place children.

LayoutTests:

* css3/flexbox/columns-auto-size-expected.txt: Added.
* css3/flexbox/columns-auto-size.html: Added.
* css3/flexbox/flex-flow-margins-auto-size-expected.txt: Added.
* css3/flexbox/flex-flow-margins-auto-size.html: Added.
    A bunch of these cases fail, but that's because of bug 70769.

git-svn-id: svn://svn.chromium.org/blink/trunk@98628 bbb929c8-8fbe-4397-9dbb-9b2b20218538