third_party/WebKit/Source/WebCore/rendering/RenderFlexibleBox.cpp
@@ -184,10 +184,7 @@ void RenderFlexibleBox::layoutBlock(bool relayoutChildren, int, BlockLayoutPass)
 
     layoutInlineDirection(relayoutChildren);
 
-    if (isColumnFlow())
-        computeLogicalWidth();
-    else
-        computeLogicalHeight();
+    computeLogicalHeight();
 
     if (size() != previousSize)
         relayoutChildren = true;
@@ -692,8 +689,10 @@ void RenderFlexibleBox::layoutAndPlaceChildrenInlineDirection(FlexOrderIterator&
 
         if (hasPackingSpace(availableFreeSpace, totalPositiveFlexibility) && style()->flexPack() == PackJustify && childSizes.size() > 1)
             startEdge += availableFreeSpace / (childSizes.size() - 1);
-    }
 
+        if (isColumnFlow())
+            setLogicalHeight(startEdge);
+    }
     alignChildrenBlockDirection(iterator, maxAscent);
 }
 
